@@ -1,10 +1,10 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 464
+#define RUBY_PATCHLEVEL 465
 
-#define RUBY_RELEASE_DATE "2013-08-09"
+#define RUBY_RELEASE_DATE "2013-08-14"
 #define RUBY_RELEASE_YEAR 2013
 #define RUBY_RELEASE_MONTH 8
-#define RUBY_RELEASE_DAY 9
+#define RUBY_RELEASE_DAY 14
 
 #include "ruby/version.h"
 
