@@ -1,3 +1,8 @@
+Wed Aug 14 09:56:55 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/mkmf.rb (have_framework): allow header file to check.
+	  [ruby-core:55745] [Bug #8593]
+
 Fri Aug  9 16:29:22 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/mkmf.rb (xsystem): expand environment variable in all macros not
